--- a/package.json
+++ b/package.json
@@ -2,6 +2,16 @@
     "name": "wc3-ts-common",
     "version": "1.0.0",
     "description": "",
+    "contributors": [
+        {
+            "name": "TriggerHappy",
+            "url": "https://github.com/cipherxof"
+        },
+        {
+            "name": "Zed",
+            "url": "https://github.com/Z-Machine"
+        }
+    ],
     "private": true,
     "license": "MIT",
     "scripts": {
@@ -10,13 +20,10 @@
         "clean": "rm -rf ./out/"
     },
     "devDependencies": {
-        "@types/fs-extra": "^9.0.13",
-        "fdir": "^5.2.0",
-        "fs-extra": "^10.1.0",
-        "lua-types": "^2.12.0",
         "mdx-m3-viewer": "^5.12.0",
         "typescript": "^4.7.4",
         "typescript-to-lua": "^1.9.0",
+        "lua-types": "^2.12.0",
         "war3-types-strict": "github:TinkerWorX/war3-types-strict"
     }
 }
